[package]
name = "multimedia_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Actix
actix-rt = "2.8.0"
actix-web = "4"

#WebSocket
actix-web-actors="4.2.0"
actix = "0.13.1"

#UUID
uuid = { version = "1.3.2", features = ["serde", "v4"] }

#SERDE 
serde = {version="1.0.106", features=["derive"]}
serde_json = "1"

#Logger
env_logger = "0.10.0"

# .ENV
dotenvy = "0.15"